--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -1,5 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="kin_purple">#6f41e8</color>
-    <color name="kin_white">#fff</color>
+
+    <color name="sendkin_grey_popup">@color/sendkin_grey_dark</color>
+    <color name="sendkin_btn_purple_disable">@color/sendkin_grey</color>
+    <color name="sendkin_btn_purple_pressed">@color/sendkin_purple_dark</color>
+    <color name="sendkin_btn_white_disable">@color/sendkin_grey_dark</color>
+    <color name="sendkin_btn_white_pressed">@color/sendkin_white_dark</color>
+    <color name="sendkin_actionBarTitle">@color/sendkin_darker_text</color>
+    <color name="sendkin_black_border">@color/sendkin_dark_text</color>
+
+    <color name="sendkin_purple">#6f41e8</color>
+    <color name="sendkin_purple_dark">#351194</color>
+
+    <color name="sendkin_white">#fff</color>
+    <color name="sendkin_white_dark">#f3f1ea</color>
+
+
+    <color name="sendkin_red">#e02164</color>
+    <color name="sendkin_red_light">#FFF5F9</color>
+
+    <color name="sendkin_grey_dark">#8f8f8f</color>
+    <color name="sendkin_grey">#a6a6a6</color>
+
+    <color name="sendkin_darker_text">#1f1f1f</color>
+    <color name="sendkin_dark_text">#363636</color>
+
 </resources>
