DP-735_build_alerts

--- a/core/src/main/res/drawable/sendkin_btn_white_text_colors_state_list.xml
+++ b/core/src/main/res/drawable/sendkin_btn_white_text_colors_state_list.xml
@@ -4,7 +4,7 @@
         android:color="@color/sendkin_grey"
         android:state_enabled="false"/>
     <item
-        android:color="@color/sendkin_white"
+        android:color="@color/sendkin_purple_dark"
         android:state_pressed="true"/>
     <item android:color="@color/sendkin_purple" />
 </selector>
