--- a/sending/src/main/res/layout/public_address_info_dialog.xml
+++ b/sending/src/main/res/layout/public_address_info_dialog.xml
@@ -3,22 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/padding_normal"
-    android:paddingTop="@dimen/padding_normal"
-    android:paddingRight="32dp"
-    android:paddingLeft="32dp">
+    android:layout_height="wrap_content"
+    >
 
     <TextView
         android:id="@+id/title"
         style="@style/SendKinActionBarTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginRight="32dp"
         android:text="@string/what_is_a_public_address"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,9 +26,13 @@
         style="@style/SendKinTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/alert_padding"
+        android:layout_marginLeft="@dimen/alert_padding"
         android:layout_marginTop="@dimen/padding_normal"
+        android:layout_marginEnd="@dimen/alert_padding"
+        android:layout_marginRight="@dimen/alert_padding"
         android:lineSpacingExtra="6sp"
-        android:text="some info TBD"
+        android:text="@string/public_address_info"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title" />
@@ -39,16 +40,19 @@
 
     <TextView
         android:id="@+id/ok"
-        style="@style/SendKinDialogAction.Purple"
-        android:layout_width="wrap_content"
+        style="@style/SendKinTextBtn.White"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="18dp"
+        android:layout_marginLeft="18dp"
         android:layout_marginTop="48dp"
-        android:layout_marginEnd="30dp"
-        android:layout_marginRight="30dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="18dp"
+        android:layout_marginRight="18dp"
+        android:layout_marginBottom="18dp"
         android:text="@android:string/ok"
         android:textAllCaps="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/publicAddress" />
 </android.support.constraint.ConstraintLayout>
