--- a/sending/src/main/res/layout/recepient_address_page.xml
+++ b/sending/src/main/res/layout/recepient_address_page.xml
@@ -37,12 +37,12 @@
         style="@style/SendKinEditText.PublicAddress"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:maxLength="@integer/oublic_address_len"
         android:layout_marginStart="@dimen/padding_normal"
         android:layout_marginLeft="@dimen/padding_normal"
         android:layout_marginTop="@dimen/padding_small"
         android:layout_marginEnd="@dimen/padding_normal"
         android:layout_marginRight="@dimen/padding_normal"
+        android:scrollHorizontally="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
