--- a/sending/src/main/res/layout/balnce_action_bar.xml
+++ b/sending/src/main/res/layout/balnce_action_bar.xml
@@ -51,6 +51,7 @@
         android:layout_marginEnd="4dp"
         android:layout_marginRight="4dp"
         android:visibility="gone"
+        tools:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/kinBalance"
         app:layout_constraintTop_toTopOf="parent"
