--- a/sending/src/main/res/layout/recepient_address_page.xml
+++ b/sending/src/main/res/layout/recepient_address_page.xml
@@ -37,6 +37,7 @@
         style="@style/SendKinEditText.PublicAddress"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:maxLength="@integer/oublic_address_len"
         android:layout_marginStart="@dimen/padding_normal"
         android:layout_marginLeft="@dimen/padding_normal"
         android:layout_marginTop="@dimen/padding_small"
