--- a/sending/src/main/res/layout/transaction_dialog_fragment.xml
+++ b/sending/src/main/res/layout/transaction_dialog_fragment.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:focusableInTouchMode="true"
     android:layout_height="wrap_content">
 
     <View
@@ -37,12 +38,43 @@
         android:layout_marginStart="@dimen/alert_padding"
         android:layout_marginLeft="@dimen/alert_padding"
         android:layout_marginTop="48dp"
-        android:layout_marginEnd="@dimen/alert_padding"
-        android:layout_marginRight="@dimen/alert_padding"
         android:text="@string/sending_to"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dialogConfirm" />
+
+    <TextView
+        android:id="@+id/contactNickName"
+        style="@style/SendKinActionBarTitle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="18dp"
+        android:layout_marginLeft="18dp"
+        android:layout_marginEnd="18dp"
+        android:layout_marginRight="18dp"
+        android:gravity="right"
+        tools:text="Some Nick Name"
+        android:visibility="gone"
+        tools:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="@+id/sendingToTitle"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/sendingToTitle"
+        app:layout_constraintTop_toTopOf="@+id/sendingToTitle" />
+
+    <TextView
+        android:id="@+id/shortAddress"
+        style="@style/SendKinTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="18dp"
+        android:layout_marginRight="18dp"
+        android:text="XXXX-52fb"
+        android:gravity="end|right"
+        android:textColor="#a2a2a2"
+        android:textSize="@dimen/sendkin_text_small_size"
+        app:layout_constraintBottom_toTopOf="@+id/delimTop"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/contactNickName" />
+
 
 
     <TextView
@@ -71,7 +103,7 @@
         android:layout_marginTop="11dp"
         android:layout_marginEnd="@dimen/alert_padding"
         android:layout_marginRight="@dimen/alert_padding"
-        android:background="@color/sendkin_grey"
+        android:background="@color/sendkin_delimiter_grey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -123,7 +155,7 @@
         android:layout_marginTop="45dp"
         android:layout_marginEnd="@dimen/alert_padding"
         android:layout_marginRight="@dimen/alert_padding"
-        android:background="@color/sendkin_grey"
+        android:background="@color/sendkin_delimiter_grey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -168,8 +200,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="gone"
-        app:constraint_referenced_ids="kinIcon, amountTitle, sendingToTitle, delimTop2, amount, delimTop, recipientAddress, sendBtn, cancelSend, dialogConfirm"
-        tools:visibility="gone" />
+        app:constraint_referenced_ids="kinIcon, shortAddress, amountTitle, contactNickName, sendingToTitle, delimTop2, amount, delimTop, recipientAddress, sendBtn, cancelSend, dialogConfirm"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/dialogSendingTitle"
@@ -182,7 +214,7 @@
         android:layout_marginEnd="@dimen/alert_padding"
         android:layout_marginRight="@dimen/alert_padding"
         android:gravity="center"
-        android:text="@string/send_kin"
+        android:text="@string/sending_kin_title"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -198,7 +230,7 @@
         android:layout_marginBottom="140dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_wallet_item" />
+        app:srcCompat="@drawable/ic_wallet_purple_icon" />
 
     <ImageView
         android:id="@+id/walletLeft"
@@ -212,7 +244,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dialogSendingTitle"
         app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/ic_wallet_item" />
+        app:srcCompat="@drawable/ic_wallet_purple_icon" />
 
     <TextView
         android:id="@+id/sendingAmount"
@@ -250,7 +282,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
         android:layout_marginEnd="16dp"
-
+        android:indeterminate="true"
         android:layout_marginRight="16dp"
         app:layout_constraintBottom_toBottomOf="@+id/walletRight"
         app:layout_constraintEnd_toStartOf="@+id/walletRight"
@@ -264,7 +296,7 @@
         android:layout_height="wrap_content"
         android:visibility="gone"
         app:constraint_referenced_ids="sendingKinIcon, progressBar,dialogSendingTitle, sendingAmount, walletRight, walletLeft"
-        tools:visibility="visible" />
+        tools:visibility="gone" />
 
     <ImageView
         android:id="@+id/dialogSendCompleteIcon"
@@ -325,8 +357,6 @@
         android:layout_marginEnd="@dimen/alert_padding"
         android:layout_marginRight="@dimen/alert_padding"
         android:hint="Nick Name"
-        android:maxLength="@integer/name_max_len"
-        android:scrollHorizontally="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/successText" />
@@ -337,10 +367,10 @@
         android:layout_height="1dp"
         android:layout_marginStart="@dimen/alert_padding"
         android:layout_marginLeft="@dimen/alert_padding"
-        android:layout_marginTop="@dimen/alert_padding"
+        android:layout_marginTop="45dp"
         android:layout_marginEnd="@dimen/alert_padding"
         android:layout_marginRight="@dimen/alert_padding"
-        android:background="@color/sendkin_grey"
+        android:background="@color/sendkin_delimiter_grey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -353,7 +383,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/alert_padding"
         android:layout_marginLeft="@dimen/alert_padding"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="18dp"
         android:layout_marginEnd="@dimen/alert_padding"
         android:layout_marginRight="@dimen/alert_padding"
         android:text="@string/save"
@@ -457,6 +487,7 @@
         tools:layout_editor_absoluteX="68dp"
         tools:layout_editor_absoluteY="40dp"
         tools:visibility="gone" />
+
 
 
 </android.support.constraint.ConstraintLayout>
