--- a/kin-sendkin-lib/src/main/res/layout/contact_item.xml
+++ b/kin-sendkin-lib/src/main/res/layout/contact_item.xml
@@ -5,6 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <View
+        android:id="@+id/cover"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@color/sendkin_new_item_cover"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/delim"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
+
     <ImageView
         android:id="@+id/wallet"
         android:layout_width="26dp"
@@ -77,4 +89,5 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/address"
         app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
